# httpx-metrics

./: LICENSE.txt  README.md  prometheus.yml  pyproject.toml  requirements.txt  test.py  unasync.py
.github/workflows/: main.yml  publish.yml
httpx_metrics/: __init__.py  async_metrics.py  metrics_registry.py  sync_metrics.py  transport.py
httpx_metrics/_async/metrics/: __init__.py  base.py  cached_requests.py  download_duration.py  processing_requests.py  requests_duration.py  total_requests.py
httpx_metrics/_sync/metrics/: __init__.py  base.py  cached_requests.py  download_duration.py  processing_requests.py  requests_duration.py  total_requests.py
scripts/: check  lint  publish  test
src/httpx_observer/: transport.py
src/httpx_observer/metrics/: __init__.py  processing_requests.py  requests_duration.py  total_requests.py
tests/: __init__.py  test_smoke.py
