[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "httpx-metrics"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Karen Petrosyan", email = "kar.petrosyanpy@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "prometheus_client",
]

[project.urls]
Issues = "https://github.com/Karen Petrosyan/httpx-metrics/issues"
Source = "https://github.com/Karen Petrosyan/httpx-metrics"

[project.optional-dependencies]

hishel = [
    "hishel>=0.0.29,<0.1",
]

[tool.hatch.version]
path = "httpx_metrics/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["httpx_metrics"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "PIE"]
ignore = ["B904", "B028"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "F405"]
"async_metrics.py" = ["F405", "F403"]
"sync_metrics.py" = ["F405", "F403"]